# EvidentialNeRF

./: .gitignore  LICENSE  README.md  pyproject.toml
nerfstudio_uncertainty/dataparsers/: configs.py  lf.py  llff.py  phototourism.py  robustnerf.py
nerfstudio_uncertainty/methods/: configs.py  nerfacto.py  nerfacto_dropout.py  nerfacto_evidential.py  nerfacto_mol.py  nerfacto_normal.py
nerfstudio_uncertainty/metrics/: __init__.py  ause.py  nll.py
nerfstudio_uncertainty/scripts/data_processing/: lf.sh  llff.sh  phototourism.sh  robustnerf.sh
nerfstudio_uncertainty/scripts/lf/: baseline.sh  config.sh  dropout.sh  evidential.sh  mol.sh  normal.sh
